[package]
name = "nearsay-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
bcrypt = "0.16.0"
dotenvy = "0.15.7"
futures = "0.3.31"
hmac = "0.12.1"
job_scheduler = "1.2.1"
jwt = "0.16.0"
mongodb = "3.1.1"
rand = "0.8.5"
redis = { version = "0.29.1", features = ["aio", "geospatial", "r2d2", "tokio-comp"] }
redis-macros = "0.5.2"
serde = "1.0.215"
serde_json = "1.0.133"
sha2 = "0.10.8"
socketioxide = "0.15.1"
tokio = {version = "1.41.1", features = ["rt-multi-thread"] }
tokio-cron-scheduler = "0.13.0"
tower = "0.5.2"
tower-http = { version = "0.5.0", features = ["cors"] }
